# finance-tracker-app

./: .pre-commit-config.yaml  README.md  __main__.py  card_transactions_script.py  dummy_data.csv  main.py  pyproject.toml
app/: __main__.py
app/core/: transactions.py
app/widgets/: file_drop_area.py  plot.py  result_table.py
core/: card_transactions_script.py  scrape_exch_rate.py  transactions.py
finance_tracker_app/: __init__.py  __main__.py
finance_tracker_app/core/: scrape_exch_rate.py  transactions.py
finance_tracker_app/widgets/: drop_area_ui.py  file_drop_area.py
tests/: test_exchange_rate.py  test_transactions.py
uis/: drop_area_ui.py
widgets/: drop_area_ui.py  file_drop_area.py  plot.py  result_table.py  unclassified.py
