[project]
dependencies = [
    "matplotlib >= 3.10.5",
    "numpy >= 2.3.2",
    "pandas >= 2.3.1",
    "pyqt6 >= 6.9.1",
    "beautifulsoup4 >= 4.13.4",
    "requests >= 2.32.4",
    "python-dotenv >= 1.1.1"
]

name = "finance-tracker-app"
dynamic = ["version", "readme"]
description = "My personal finace tracker app"

requires-python = ">=3.10"

[[project.authors]]
name = "Niki Gallou"

[project.urls]
repository = "https://github.com/ng-ngallou/finance-tracker-app"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
#doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy", "black"]

[tool.pytest.ini_options]
pythonpath = [
    ".",        # project root
    "finance_tracker_app",
]
testpaths = [
    "tests"
]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "finance_tracker_app/_version.py"
local_scheme = "no-local-version"


[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_tracker_app*"]
namespaces = false

[tool.setuptools.package-data]

[project.scripts]
# project endpoints here


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]

line-length = 88         # black and ruff default
target-version = "py312"

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # pyflakes
    "E",   # error  (pycodestyle)
    "W",   # warning (pycodestyle)
    "I",   # isort
    "N",   # naming  (pep8)
    "UP",  # pyupgrade
    "PLC", # convention  (pylint)
    "PLE", # error  (pylint)
    "PLW", # warning  (pylint)
    "PLR", # refactor  (pylint)
    # "D",  # docstring (pydocstyle),  # not enabled by default
    "PD",   # pandas
    "TRY",  # tryceratops
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff
    # v flake8 v
    "B",
    "C4",
    "FBT",
    "A",
    "EM",
    "ISC",
    "FA",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "G004", "N806", "N803", "PLR0913", "FBT001", "PD901", "E701", "N801", "PT011",
          "TRY003", "PLR2004", "N815", "N802", "EM102", "EM101", "TRY002", "PLR0912"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"
disable_error_code = ["has-type", "assignment", "attr-defined", "index", "name-defined"]

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"

[tool.monkeytype]
# Set the code package to analyze (adjust accordingly)
package_name = "finance-tracker-app"
# Specify a filter to only collect types for your code
include = ["finance_tracker_app.*"]
# Ignore third-party dependencies
exclude = ["venv.*", "site-packages.*"]
